added other file reqs for ncah

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,6 +110,7 @@ jobs:
           - "mpcdf"
           - "mpcdf_viper"
           - "munin"
+          - "ncah"
           - "nci_gadi"
           - "nu_genomics"
           - "nygc"
