--- a/nfcore_custom.config
+++ b/nfcore_custom.config
@@ -86,6 +86,7 @@ profiles {
     mpcdf              { includeConfig "${params.custom_config_base}/conf/mpcdf.config" }
     mpcdf_viper        { includeConfig "${params.custom_config_base}/conf/mpcdf_viper.config" }
     munin              { includeConfig "${params.custom_config_base}/conf/munin.config" }
+    ncah               { includeConfig "${params.custom_config_base}/conf/ncah.config" }
     nci_gadi           { includeConfig "${params.custom_config_base}/conf/nci_gadi.config" }
     nu_genomics        { includeConfig "${params.custom_config_base}/conf/nu_genomics.config" }
     nygc               { includeConfig "${params.custom_config_base}/conf/nygc.config" }
