updated slurm partition name

--- a/conf/ncah.config
+++ b/conf/ncah.config
@@ -10,7 +10,7 @@ params {
 
 process {
     executor = 'slurm'
-    queue = 'all'
+    queue = ''
     maxRetries = 2
     scratch = '/project/scratch'
     // clusterOptions = ''
@@ -19,7 +19,7 @@ process {
 
 executor {
     $slurm {
-        queue = 'all'
+        queue = 'prod-compute'
         queueSize = 200
         pollInterval = '2 min'
         queueStatInterval = '5 min'
